<resources>
    <string name="app_name">Explore Wise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps_fragment">MapsFragment</string>
    <string name="google_maps_api_key">AIzaSyD5Xo3fOfn99rRrM56fEddvsBSIawlYGKg</string>
    <string name="title_activity_temp_bottom">tempBottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="signup">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account? </string>
    <string name="already_have_an_account_login">Already Have an Account? </string>
    <string name="required">Required</string>
    <string name="enter_devotional_place_name">Enter Devotional Place Name</string>
    <string name="enter_famous_food_name">Enter Famous Food Name</string>
    <string name="enter_famous_place_name">Enter Famous Place Name</string>
    <string name="add_devotional_place">Add Devotional Place</string>
    <string name="about_devotional">About Devotional Place</string>
    <string name="save">Save</string>
    <string name="about_food">About Famous Food</string>
    <string name="about_place">About Famous Place</string>
    <string name="add_image">Add Image</string>
    <string name="back">Back</string>
    <string name="image_name">Image Name</string>
    <string name="image_cont_des">Uploaded Image</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="additional_address_info">Additional Address Info</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="gujarat">Gujarat</string>
    <string name="postal_code">Postal Code</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="contact_information_for_place">Contact Information</string>
    <string name="lat_long_picker">Click for Coordinate Picker</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="website_url">Website URL</string>
    <string name="cancel">Cancel</string>
    <string name="fab">fab</string>
    <string name="home">Home</string>
    <string name="Explore">Explore</string>
    <string name="location">Location</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="add_famous_place">Add Famous Place</string>
    <string name="add_famous_food">Add Famous Food</string>
    <string name="logo_name">Explore Wise</string>
    <string name="search_text">Search Here ..</string>
    <string name="food">Food</string>
    <string name="devotional">Devotional</string>
    <string name="place">Place</string>
    <string name="details">Details</string>
    <string name="featured_locations">Famous From Your City</string>
    <string name="featured_locations_descriptions">This is featured city of the day you will find.</string>
    <string name="most_visited_cities">Famous Cities</string>
    <string name="most_visited_devotion">Devotional Places</string>
    <string name="most_visited_places">Hot Places</string>
    <string name="delicious_delights">Delicious Delights</string>
    <string name="view_all">View All</string>
    <string name="choose_option">Choose Option :</string>

    <string-array name="cities">
        <item>Ahmedabad</item>
        <item>Amreli</item>
        <item>Anand</item>
        <item>Aravalli</item>
        <item>Banaskantha</item>
        <item>Bharuch</item>
        <item>Bhavnagar</item>
        <item>Botad</item>
        <item>Chhota Udaipur</item>
        <item>Dahod</item>
        <item>Dang</item>
        <item>Devbhumi Dwarka</item>
        <item>Gandhinagar</item>
        <item>Gir Somnath</item>
        <item>Jamnagar</item>
        <item>Junagarh</item>
        <item>Kheda</item>
        <item>Kutch</item>
        <item>Mahisagar</item>
        <item>Mehsana</item>
        <item>Morbi</item>
        <item>Narmada</item>
        <item>Navsari</item>
        <item>Panchmahal</item>
        <item>Patan</item>
        <item>Porbandar</item>
        <item>Rajkot</item>
        <item>Sabarkantha</item>
        <item>Surat</item>
        <item>Surendranagar</item>
        <item>Tapi</item>
        <item>Vadodara</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>