<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFragmentAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BottomNavFragments.AddFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFamousOfCity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0CF3E1"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="Add Item"
        app:titleTextColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/btnAddPlace"
        style="@style/button2"
        android:layout_marginBottom="55dp"
        android:text="@string/add_famous_place" />

    <Button
        android:id="@+id/btnAddDevotionalPlace"
        style="@style/button2"
        android:text="@string/add_devotional_place" />

    <Button
        android:id="@+id/btnAddFood"
        style="@style/button2"
        android:layout_marginTop="55dp"
        android:text="@string/add_famous_food" />

    <Button
        android:id="@+id/btnTemp"
        style="@style/button2"
        android:layout_marginTop="105dp"
        android:text="Temp" />


</FrameLayout>