<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"
    android:layout_margin="@dimen/_10sdp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imgCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_14sdp">

        <ImageView
            android:id="@+id/searchImage"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"

            android:background="@drawable/card3_home"
            android:contentDescription="@string/image_name"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_image_24"
            tools:ignore="ContentDescription" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/imgCard"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_16sdp"
            tools:text="@string/place" />

        <TextView
            android:id="@+id/searchAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp"
            tools:text="@string/city" />
    </LinearLayout>


</RelativeLayout>